--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@strapi/plugin-cloud": "5.5.1",
     "@strapi/plugin-users-permissions": "5.5.1",
     "@strapi/provider-upload-local": "^5.5.1",
-    "@strapi/strapi": "5.5.1",
+    "@strapi/strapi": "^5.6.0",
     "better-sqlite3": "^11.3.0",
+    "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "sqlite3": "^5.1.7",
+    "strapi-provider-upload-supabase": "^1.0.0",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
