--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "sqlite3": "^5.1.7",
+    "strapi-provider-upload-supabase": "^1.0.0",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
