--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
 # Server
 HOST=0.0.0.0
 PORT=1337
@@ -20,7 +19,7 @@ SUPABASE_DIRECTORY=files
 
 # Supabase Database
 DATABASE_CLIENT=postgres
-DATABASE_URL=postgresql://postgres:Devk1910@db.hwlnatepusmcpmnmlroe.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.hwlnatepusmcpmnmlroe:Devk1910@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 DATABASE_SHEMA=public
 DATABASE_POOL_MIN=1
 DATABASE_POOL_MAX=100
