--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     // Include root files
     "./",
     // Include all ts files
-    "./**/*.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/images.d.ts",
     // Include all js files
     "./**/*.js",
     // Force the JSON files in the src folder to be included
