--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-
 # Server
 HOST=0.0.0.0
 PORT=1338
@@ -24,6 +23,7 @@ DATABASE_URL=postgresql://postgres:Devk1910@db.hwlnatepusmcpmnmlroe.supabase.co:
 DATABASE_SHEMA=public
 DATABASE_POOL_MIN=1
 DATABASE_POOL_MAX=100
+DATABASE_SSL=false
 
 # HttpCookies
 CORS_ORIGIN=http://localhost:5173,https://test1netzero.netlify.app
